[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Block.png" type="Texture" id=1]
[ext_resource path="res://Objects/Eyeball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Mouth_Closed.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Brick.gd" type="Script" id=4]
[ext_resource path="res://Audio/BrickNo2.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/Mouth_Open.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
custom_solver_bias = 1.0
extents = Vector2( 62, 30 )

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="Animation" id=3]
length = 6.0
tracks/0/type = "method"
tracks/0/path = NodePath("NoSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.21, 0.3, 0.9, 1, 1.8, 1.92, 2.04, 2.09, 2.21, 2.25, 2.36, 2.4, 2.67, 3.1, 5.9 ),
"transitions": PoolRealArray( 7.38734e-13, 9.70628e-15, 6.14441e-10, 1.00486e-14, 4.51719e-08, 4.16119e-14, 1.11972e-12, 1.22143e-20, 3.29273e-10, 1.73053e-11, 2.68102e-17, 4.31584e-05, 1.49012e-08, 3.94923e-06, 6.47424e-18, 2.43104e-06 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ) ]
}

[node name="Brick" type="StaticBody2D" groups=[
"Bricks",
]]
collision_layer = 3
script = ExtResource( 4 )

[node name="Block" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftEye" parent="." instance=ExtResource( 2 )]
position = Vector2( -37, 3 )

[node name="RightEye" parent="." instance=ExtResource( 2 )]
position = Vector2( 37, 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, 15 )
texture = ExtResource( 3 )

[node name="NoScream" type="AnimationPlayer" parent="."]
anims/NoScream = SubResource( 3 )

[node name="NoSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="animation_finished" from="NoScream" to="." method="_on_NoScream_animation_finished"]
